--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Luan Liz",
   "license": "ISC",
