--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
+  "outputDirectory": ".",
   "builds": [
     {
       "src": "./app.js",
       "use": "@vercel/node"
-    }
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
+    }    
   ],
   "routes": [
     {
